--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.6"
+    "@prisma/client": "^5.21.1",
+    "hono": "^4.6.6",
+    "prisma": "^5.21.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
